Added a LightVertex shader that generates a full screen triangle. Added some information to the library

--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -35,6 +35,9 @@
     <FxCompile Include="GBufferVertex.hlsl">
       <Filter>Source Files</Filter>
     </FxCompile>
+    <FxCompile Include="LightVertex.hlsl">
+      <Filter>Source Files</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bth_image.h">
