--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClInclude Include="bth_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="grass_texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="known_issues.txt">
