Fixed the normal creation in the CreateWorld function, made the light follow the camera, changed some of the lightäs values, and set the application to windowed mode

--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -52,4 +52,9 @@
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="heightmap.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
