--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -201,6 +201,9 @@
     <Text Include="library.txt" />
     <Text Include="TODO.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="heightmap.bmp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
