Tried to add directxtk, because directxtex did not work. still get the same errors though

--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClInclude Include="bth_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="known_issues.txt">
@@ -56,5 +59,13 @@
     <Image Include="heightmap.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Demo.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
