--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -59,6 +59,9 @@
     <Image Include="heightmap.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="grasstexture.bmp">
+      <Filter>Source Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Demo.rc">
