It is now possible to load .obj files however there are still some problems with normals and specularColor

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -93,6 +93,11 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <Optimization>Disabled</Optimization>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -200,6 +205,14 @@
     <Text Include="known_issues.txt" />
     <Text Include="library.txt" />
     <Text Include="TODO.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cube_green_phong_12_tris_TRIANGULATED.mtl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="cube_green_phong_12_tris_TRIANGULATED.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </Object>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
