--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -52,4 +52,14 @@
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cube_green_phong_12_tris_TRIANGULATED.mtl">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="cube_green_phong_12_tris_TRIANGULATED.obj">
+      <Filter>Resource Files</Filter>
+    </Object>
+  </ItemGroup>
 </Project>
