More work done on rewriting the application as classes. So far the Camera, Light, and GraphicsHandler classes are mostly done. Still need to do the Object class, Engine class, and get rid of all global variables.

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -109,7 +109,10 @@
     <Link />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CameraHandler.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="GlobalResources.cpp" />
+    <ClCompile Include="LightHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="GraphicsHandler.cpp" />
   </ItemGroup>
@@ -212,7 +215,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bth_image.h" />
+    <ClInclude Include="CameraHandler.hpp" />
     <ClInclude Include="Engine.hpp" />
+    <ClInclude Include="LightHandler.hpp" />
     <ClInclude Include="Object.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="GlobalResources.hpp" />
