--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GlobalResources.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="LightFragment.hlsl">
@@ -61,9 +64,6 @@
     <ClInclude Include="Engine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Object.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="GlobalResources.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -74,6 +74,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CameraHandler.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectHandler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
