Program now runs! It seems the texture loading isn't working right now but other than that it works just like the heightmap+deferred rendering build did

--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="TimeHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="old_main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="LightFragment.hlsl">
