--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="GraphicsHandler.cpp" />
     <ClCompile Include="ObjectHandler.cpp" />
     <ClCompile Include="old_main.cpp" />
+    <ClCompile Include="old_obj_main.cpp" />
     <ClCompile Include="TimeHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
