The heightmap and .obj branches have now been fully merged. Some functions will probably be moved to different classes eventually but the current class structure is good enough for now

--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -118,5 +118,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="donut_red_lambert_20000_tris_TRIANGLULATED.mtl">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="wt_teapot.obj">
+      <Filter>Resource Files</Filter>
+    </Object>
   </ItemGroup>
 </Project>
