--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -244,6 +244,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Object Include="donut_red_lambert_20000_tris_TRIANGLULATED.obj" />
     <Object Include="wt_teapot.obj">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
