--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -59,6 +59,12 @@
     <FxCompile Include="LightVertex.hlsl">
       <Filter>Source Files</Filter>
     </FxCompile>
+    <FxCompile Include="ShadowPassVertex.hlsl">
+      <Filter>Source Files</Filter>
+    </FxCompile>
+    <FxCompile Include="ShadowPassFragment.hlsl">
+      <Filter>Source Files</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bth_image.h">
