--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -107,6 +107,12 @@
     <Image Include="grass-free-texture.jpg">
       <Filter>Source Files</Filter>
     </Image>
+    <Image Include="world.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="peninsula.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Demo.rc">
