--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -268,6 +268,7 @@
     <ResourceCompile Include="Demo.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="donut_red_lambert_20000_tris_TRIANGLULATED.mtl" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
