--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -121,6 +121,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="donut_red_lambert_20000_tris_TRIANGLULATED.mtl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Object Include="wt_teapot.obj">
