--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -94,6 +94,12 @@
     <ClInclude Include="TimeHandler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="QuadtreeHandler.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FrustumHandler.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="known_issues.txt">
