--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CameraHandler.cpp" />
+    <ClCompile Include="ComputeShadercpp.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GlobalResources.cpp" />
     <ClCompile Include="LightHandler.cpp" />
@@ -247,6 +248,7 @@
   <ItemGroup>
     <ClInclude Include="bth_image.h" />
     <ClInclude Include="CameraHandler.hpp" />
+    <ClInclude Include="ComputeShader.hpp" />
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="LightHandler.hpp" />
     <ClInclude Include="ObjectHandler.hpp" />
