--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -268,6 +268,7 @@
     <Image Include="grass-free-texture.jpg" />
     <Image Include="grass.dds" />
     <Image Include="heightmap.bmp" />
+    <Image Include="seamlessstone.dds" />
     <Image Include="stone.dds" />
     <Image Include="stone.jpg" />
   </ItemGroup>
