--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -134,6 +134,9 @@
     <Image Include="stone.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="seamlessstone.dds">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Demo.rc">
